--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>under construction</h1>
+<h1>Name's Lewis; Joshua Lewis.Major's Design; Graphic Design. I am moost intrerested in the digital illustration field of Graphics.</h1>
