--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>boyjupoboyjupoboyjupobpyjupoboyjupoboyjupoboyjuopboyjupoboyjupuboyjupoboyjupoboyjupoboyjupoboyjupoboyjupoboyjupo</h1>
+<h1>Coming Soon</h1>
 boyjupo.me
