--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h2>Coming Soon</h2>
+<html>
+  <head>
+    <title> Joshua jair jupiter | HOME </title>
+  </head>
 boyjupo.me
 <img src="logo-1.gif">
 Work in Progress
