--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title> Joshua jair jupiter | HOME </title>
   </head>
+  header{
+  background color: #ffff00;
 boyjupo.me
 <img src="logo-1.gif">
 Work in Progress
