--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <title> Joshua jair jupiter | HOME </title>
-  </head>
-  header{
+    <style>
+      
+        header{
   background color: #ffff00;
-boyjupo.me
+  }
+      
+    </style>
+  </head>
+
+<body>
+ <header>
 <img src="logo-1.gif">
+</header>
 Work in Progress
+</body>
