--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <style>
       
         header{
-  background color: #ffff00;
+  background-color: #ffff00;
+  }
+  
+        footer{
+    background-color: #000000;
   }
       
     </style>
@@ -15,5 +19,9 @@
  <header>
 <img src="logo-1.gif">
 </header>
+<footer>
+  <h2> Social Media </h2>
+  instagram
+</footer>
 Work in Progress
 </body>
