--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   }
   
         footer{
-    background-color: #000000;
+          margin-top: 43px;
+          background-color: #000000;
+          color: white;
+          padding: 26px;
   }
       
     </style>
