--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<h2>Coming Soon</h2>
+
 <html>
   <head>
     <title> Joshua jair jupiter | HOME </title>
+   
     <style>
-      
-        header{
+      header{
   background-color: #ffff00;
   }
   
-        footer{
+       footer{
           margin-top: 43px;
           background-color: #000000;
           color: white;
           padding: 26px;
-  }
-      
-    </style>
+  } 
+   </style>
+ 
   </head>
-
-<body>
- <header>
+ 
+  <header>
 <img src="logo-1.gif">
 </header>
-<footer>
+
+<body>
+
+  <h2>Art Design</h2>
+
+  <footer>
   <h2> Social Media </h2>
   instagram |Twitter | Tumblr
 </footer>
