--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
 <!doctype html>
   <head>
-    <title> Joshua jair jupiter | HOME </title>
-   
+    <title> Boyjupo | HOME </title>
     <style>
-      header{
-  background-color: #ffff00;
-  }
-  
-       footer{
-          margin-top: 43px;
-          background-color: #000000;
-          color: white;
-          padding: 26px;
-  } 
    </style>
- 
   </head>
  
   <header>
