--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <h2>Boyjupo</h2>
 <br>
 <p>Graphic desginer and Visual Artist student at Miami International University of Art and Desgin. 
-Was born on a very small island(St. Thomas) 20 years ago. Grew up in a Christian church.
-Attended public school 4th grade and up. Ended 3 serious relationships and for good reason, too. 
+<br>Was born on a very small island(St. Thomas) 20 years ago. Grew up in a Christian church.
+<br>Attended public school 4th grade and up. Ended 3 serious relationships and for good reason, too. 
 <br>Very spiritual and Conscious individual and tree lover as well  (wink*)
 
 
