--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   </head>
  
   <header>
-<img src="logo-1.gif">
-<h2>Art Design</h2>
+    <img 
 </header>
 
-<h2>Boyjupo</h2>
-<br>
-<p>Graphic desginer and Visual Artist student at Miami International University of Art and Desgin. 
+  <section>
+ <h2>Boyjupo</h2>
+<br>Graphic desginer and Visual Artist student at Miami International University of Art and Desgin. 
 <br>Was born on a very small island(St. Thomas) 20 years ago. Grew up in a Christian church.
 <br>Attended public school 4th grade and up. Ended 3 serious relationships and for good reason, too. 
 <br>Very spiritual and Conscious individual and tree lover as well  (wink*)
-
+  </section>
 
 
 
