--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
  
   <header>
-    <img src= "THIS is boyjupo.png">
+    <img src= "THIS is boyjupo.png" width= "150">
 </header>
 
   <section>
