--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
     <title> Boyjupo | HOME </title>
     <style>
+
+element.style {
+    text-align: center;
+}
    </style>
   </head>
  
@@ -21,8 +25,6 @@
 
  
   <footer>
-  <h2> Social Media </h2>
-<br> 
    <img src= "ig logo 1.png" width= "25">
 </footer>
 
