--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <title> Boyjupo | HOME </title>
     
     <style>
-
-element.style {
-    text-align: center;
     </style>
   </head>
  
@@ -23,6 +20,6 @@ element.style {
 
 <br>  
       <footer>
-   <img src= "ig logo 1.png" width= "25">
+   <a href= "https://www.instagram.com/boyjupo/" target= "_blank" img src= "ig logo 1.png" width= "25"></a>
 </footer>
 
