--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
 <br>  
       <footer>
-   <a href= "https://www.instagram.com/boyjupo/" target= "_blank" img src= "ig logo 1.png" width= "25"></a>
+   <a href= "https://www.instagram.com/boyjupo/" target= "_blank"><img src= "ig logo 1.png" width= "25"></a>
 </footer>
 
