--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  
   <header>
     <img src= "THIS is boyjupo.png" width= "500">
+    <h3> Social Gallery | Contact </h3> 
 </header>
 
   <section>
