--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <header>
    <h3> Social Gallery | Contact </h3> 
    <img src= "THIS is boyjupo.png" width= "500">
+    <h2>Not For Sale</h2>
      
 </header>
+
+<p>
+<hr>
 
   <section>
  <h2>Boyjupo</h2>
@@ -22,6 +26,6 @@
 
 <br>  
       <footer>
-   <a href= "https://www.instagram.com/boyjupo/" target= "_blank"><img src= "ig logo 1.png" width= "25">@boyjupo</a>
+   <a href= "https://www.instagram.com/boyjupo/" target= "_blank"><img src= "ig logo 1.png" width= "25"></a>
 </footer>
 
