--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  
   <header>
    <h3> Social Gallery | Contact </h3> 
-   <img src= "THIS is boyjupo.png" width= "500">
-    <h2>Not For Sale</h2>
+   <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "500">
+    <h1>Not For Sale</h1>
      
 </header>
 
