--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <head>
     <title> Boyjupo | HOME </title>
-    
+    <meta name="viewport" content="width= 320 device-width">
     <style>
     </style>
   </head>
@@ -23,7 +23,7 @@
 <br>Attended public school 4th grade and up. Ended 3 serious relationships and for good reason, too. 
 <br>Very spiritual and Conscious individual and tree lover as well  (wink*)
   </section>
-
+<br>
 <hr>
 
 <br>  
