--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
   <head>
     <title> Boyjupo | HOME </title>
-
+    <meta name="viewport" content="width= 320 device-width">
     <style>
     </style>
   </head>
