--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
  
   <header>
-   <h3> Social Gallery | Contact </h3> 
+    <h3> <a href= "Social Gallery.html"> Social Gallery</a> | Contact </h3> 
    <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "800">
     <h1>Not For Sale</h1>
      
