--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <title> Boyjupo | HOME </title>
     <meta name="viewport" content="width= 320 device-width">
     <style>
+      <style>
+a:link    {color:black; background-color:transparent; text-decoration:none}
+</style>
     </style>
-  </head>
+</head>
  
   <header>
     <h3> <a href= "Social Gallery.html"> Social Gallery</a> | Contact </h3> 
