--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
   <head>
     <title> Boyjupo | HOME </title>
     <meta name="viewport" content="width= 320 device-width">
+    
     <style>
-      <style>
-a:link    {color:black; background-color:transparent; text-decoration:none}
+a {
+  color: black; background-color: transparent; text-decoration: none;
+      }
 </style>
-    </style>
+  
 </head>
  
   <header>
