--- a/Social Gallery.html
+++ b/Social Gallery.html
@@ -3,6 +3,10 @@
     <title> Boyjupo | Gallery </title>
     <meta name="viewport" content="width= 320 device-width">
     <style>
+     a {
+       text-decoration: none;
+       color: green;
+      }
     </style>
   </head>
  
