--- a/Social Gallery.html
+++ b/Social Gallery.html
@@ -3,12 +3,13 @@
     <title> Boyjupo | Gallery </title>
     <meta name="viewport" content="width= 320 device-width">
     <style>
-     a {
-       text-decoration: none;
-       color: green;
+     <style>
+a {
+  color: black; background-color: transparent; text-decoration: none;
       }
     </style>
-  </head>
+ 
+</head>
  
   <header>
    <a href= "../../index.html"><h3> Home | Contact </h3> </a>
