--- a/Social Gallery.html
+++ b/Social Gallery.html
@@ -2,11 +2,14 @@
   <head>
     <title> Boyjupo | Gallery </title>
     <meta name="viewport" content="width= 320 device-width">
-    <style>
+   
      <style>
 a {
-  color: black; background-color: transparent; text-decoration: none;
+  color: black;  text-decoration: none;
       }
+a:hover {
+   color: green;
+       }
     </style>
  
 </head>
