--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 a {
   color: black; background-color: transparent; text-decoration: none;
       }
-</style>
+
+ a:hover { 
+    color: yellow;
+  text-decoration: none;
+    </style>
   
 </head>
  
