--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <title> Boyjupo | HOME </title>
     <meta name="viewport" content="width= 320 device-width">
+   
+    <style>
+   html { margin: 0 auto 0 auto;
+      }
+    </style>
     
     <style>
 a {
