--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ a {
   <header>
     <h3> <a href= "Social Gallery.html"> Social Gallery |
       </a> </h3> 
-    <h3> <a href=  Contact > </a> </h3>
+    <h3> <a href= "Contact.html"> Contact </a> </h3>
     
    <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "800">
     <h1>Not For Sale</h1>
