--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
   <head>
     <title> Boyjupo | HOME </title>
@@ -23,8 +22,10 @@ a {
  
   <header>
     <h3> <a href= "Social Gallery.html"> Social Gallery |
-      </a> </h3>  <h3> <a href= "Contact.html"> Contact 
+      </a> </h3>  
+    <h3> <a href= "Contact.html"> Contact 
       </a> </h3>
+    <a href= "gallery 2.html"> Portfolio </a>
    
     
    <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "800">
