--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ a {
     <h3> <a href= "Contact.html"> Contact 
       </a> </h3>
     <a href= "gallery 2.html"> Portfolio </a>
+    <a href= "resume.pdf"> Resume </a>
    
     
    <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "800">
