--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@ a {
 </head>
  
   <header>
-    <h3> <a href= "Social Gallery.html"> Social Gallery |
-      </a> </h3>  
-    <h3> <a href= "Contact.html"> Contact 
-      </a> </h3>
+   
+</header>
+
+<body> 
+  
+<a href= "lightroom"> Social Art Gallery |
+      </a>  
+     <a href= "Contact.html"> Contact 
+      </a> 
     <a href= "gallery 2.html"> Portfolio </a>
     <a href= "resume.pdf"> Resume </a>
    
@@ -32,8 +37,6 @@ a {
    <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "800">
     <h1>Not For Sale</h1>
      
-</header>
-
 <p>
 <hr>
 
@@ -53,3 +56,4 @@ a {
    <a href= "https://www.instagram.com/boyjupo/" target= "_blank"><img src= "ig logo 1.png" width= "25"></a>
 </footer>
 
+</body>
