--- a/index.html
+++ b/index.html
@@ -26,16 +26,20 @@ a {
 
 <body> 
   
+  <section>
 <a href= "lightroom"> Social Art Gallery |
       </a>  
      <a href= "Contact.html"> Contact 
       </a> 
     <a href= "gallery 2.html"> Portfolio </a>
-    <a href= "resume.pdf"> Resume </a>
+    <a href= "resume.pdf"> Resume </a> <br>
+  </section>
    
     
+  <section>
    <img src= "THIS is boyjupo.png" Title= "Not For Sale" width= "800">
     <h1>Not For Sale</h1>
+  </section>
      
 <p>
 <hr>
