--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ a {
 <body> 
   
   <section>
-<a href= "lightroom"> Social Art Gallery |
+<a href= "lightroom"> Social Art Gallery 
       </a>  
-     <a href= "Contact.html"> Contact 
+     <a href= "Contact.html">      Contact 
       </a> 
-    <a href= "gallery 2.html"> Portfolio </a>
-    <a href= "resume.pdf"> Resume </a> <br>
+    <a href= "gallery 2.html">      Portfolio </a>
+    <a href= "resume.pdf">      Resume </a> <br>
   </section>
    
     
