--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="assets/css/custom.css">
         <script src="assets/js/libs/modernizr.custom.23122.js"></script>
     </head>
-    <body class="has-header" data-pagination-style="scroll" data-pagination-size="20">
+  
+      <body class="has-header" data-pagination-style="scroll" data-pagination-size="20">
                         <header class="">
             <div class="background"></div>
             <p class="title">
@@ -119,7 +120,10 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.10.2.min.js"><\/script>')</script><script src="assets/js/libs/jquery-1.10.2.min.js"></script>
         <script src="assets/js/main.js"></script>
-    
+         
+  <section> <!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/350922" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:1000px; height:125px"></iframe>
+    </section>
 
 </body></html>
 
