--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title> Boyjupo </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
@@ -14,17 +14,13 @@
         <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="assets/css/custom.css" >
         <script src="assets/js/libs/modernizr.custom.23122.js"></script>
     </head>
-    <body class="has-header row-spacing-lg" data-pagination-style="scroll" data-target-row-height="400">
-                        <header class="is-fixed">
+    <body class="has-header" data-pagination-style="scroll" data-pagination-size="20">
+                        <header class="">
             <div class="background"></div>
-            <div class="meta-left">
-                <p id="galleryTitle" class="title"></p>
-                                <p id="galleryAuthor" class="author">by <a id="galleryAuthorURL" href="index.html" target="_blank">Home</a></p>
-                                </p>
-            </div>
-            <div class="meta-right">
-
-            </div>
+            <p class="title">
+                <strong id="galleryTitle"> Boyjupo </strong>
+                 <span id="galleryAuthor">by Joshua Lewis</span>
+                            </p>
             <ul class="gallery-meta">
                 <li id="buttonFullscreen" title="Fullscreen Mode">
                     <div class="icon">
@@ -52,29 +48,38 @@
                         </svg>
                     </div>
                 </li>
-            </ul>
+                            </ul>
         </header>
                 <div id="thumbnailContainer">
-            <div class="thumbnails"></div>
+            <div class="thumbnails thumbnail-size-lg"></div>
         </div>
         <div id="loupeContainer" class="show-corners">
             <div class="background"></div>
-            <div class="image-container"></div>    
+            <div class="image-container"></div>
             <div class="side-navigation">
                 <div class="hotspot" id="hotspotPrevLoupe">
                     <div class="button" id="buttonPrevSideLoupe">
-                        <svg version="1.1" baseProfile="basic" id="svgIconPrevSideLoupe" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 50 50" xml:space="preserve"><path class="icon custom-colorable" fill="#231F20" d="M0,0l0,50h50V0L0,0z M18.491,25.05l9.707-9.264c0.418-0.399,1.092-0.403,1.506-0.008l1.498,1.43c0.413,0.395,0.41,1.039-0.009,1.438l-6.765,6.456l6.613,6.31c0.41,0.392,0.414,1.024,0.008,1.412l-1.471,1.404c-0.406,0.387-1.068,0.384-1.479-0.008l-6.612-6.311L18.491,25.05z"/></svg>
+                        <svg version="1.1" id="svgIconPrevSideLoupe" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 57" style="enable-background:new 0 0 30 57;" xml:space="preserve">
+                            <path class="icon custom-colorable" d="M0,0v57c16.56854,0,30-12.75989,30-28.5S16.56854,0,0,0z M17.60291,33.87964
+                                c0.34692,0.3291,0.34998,0.85938,0.00708,1.18457l-1.2431,1.17828c-0.34326,0.32532-0.90277,0.32245-1.24969-0.00647
+                                L9.53137,30.9408L7,28.54163l8.20038-7.77301c0.35333-0.33508,0.92334-0.33801,1.27271-0.00671l1.26569,1.19952
+                                c0.34943,0.3313,0.34613,0.8714-0.00739,1.2063l-5.7149,5.41711L17.60291,33.87964z"/>
+                        </svg>
                     </div>
                 </div>
                 <div class="hotspot" id="hotspotNextLoupe">
                     <div class="button" id="buttonNextSideLoupe">
-                        <svg version="1.1" baseProfile="basic" id="svgIconNextSideLoupe" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 50 50" xml:space="preserve">
-                            <path class="icon custom-colorable" fill="#231F20" d="M0,0v50h50V0H0z M28.513,27.909l-6.612,6.311c-0.411,0.392-1.073,0.395-1.479,0.008l-1.471-1.404 c-0.406-0.388-0.402-1.02,0.008-1.412l6.613-6.31l-6.765-6.456c-0.419-0.399-0.422-1.043-0.009-1.438l1.498-1.43 c0.414-0.395,1.088-0.391,1.506,0.008l9.707,9.264L28.513,27.909z"/>
+                        <svg version="1.1" id="svgIconNextSideLoupe" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 57" style="enable-background:new 0 0 30 57;" xml:space="preserve">
+                            <path class="icon custom-colorable" d="M30,57V0C13.43146,0,0,12.75989,0,28.5S13.43146,57,30,57z M12.39709,23.12036
+                                c-0.34692-0.3291-0.34998-0.85938-0.00708-1.18457l1.2431-1.17828c0.34326-0.32532,0.90277-0.32245,1.24969,0.00647l5.58582,5.29523
+                                L23,28.45837l-8.20038,7.77301c-0.35333,0.33508-0.92334,0.33801-1.27271,0.00671l-1.26569-1.19952
+                                c-0.34943-0.3313-0.34613-0.8714,0.00739-1.2063l5.7149-5.41711L12.39709,23.12036z"/>
                         </svg>
                     </div>
                 </div>
             </div>
-            <div class="lateral-nav-container">
+            <div class="info-container">
+                <div id="loupeMeta"></div>
                 <ul class="lateral-nav">
                     <li id="buttonPrev">
                         <svg version="1.1" id="svgIconPrevLoupe" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 45 45" style="enable-background:new 0 0 45 45;" xml:space="preserve">
@@ -99,9 +104,6 @@
                     </li>
                 </ul>
             </div>
-            <div class="info-container">
-                <div id="loupeMeta"></div>
-            </div>
             <div id="loupeCloseButton">
                 <svg version="1.1" id="svgIconLoupeClose" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      viewBox="0 0 45 45" style="enable-background:new 0 0 45 45;" xml:space="preserve">
@@ -115,20 +117,12 @@
         </div>
         <script type="text/javascript">
             var LR = LR || {};
-            LR.images = [                                                                                        {"id": "22", "largeWidth": "832", "largeHeight": "1200", "exportFilename": "TPL_BBLU", "title": "M&amp;M obbession", "caption" : ""},
-                         {"id": "36", "largeWidth": "1200", "largeHeight": "840", "exportFilename": "kids_in_heaven", "title": "", "caption" : ""},
-                         {"id": "54", "largeWidth": "706", "largeHeight": "1200", "exportFilename": "colorful_target", "title": "", "caption" : ""},
-                         {"id": "68", "largeWidth": "1200", "largeHeight": "1199", "exportFilename": "the_hero_1", "title": "", "caption" : ""},
-                         {"id": "82", "largeWidth": "1200", "largeHeight": "1130", "exportFilename": "Asset_1", "title": "", "caption" : ""},
-                         {"id": "102", "largeWidth": "742", "largeHeight": "1200", "exportFilename": "dbz1", "title": "", "caption" : ""},
-                         {"id": "116", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "bj3", "title": "", "caption" : ""},
-                         {"id": "130", "largeWidth": "1200", "largeHeight": "1200", "exportFilename": "THIS_is_boyjupo", "title": "", "caption" : ""},
-                         {"id": "144", "largeWidth": "1200", "largeHeight": "1198", "exportFilename": "geometric_exp", "title": "", "caption" : ""},
-                         {"id": "158", "largeWidth": "1198", "largeHeight": "1200", "exportFilename": "protob", "title": "", "caption" : ""},
+            LR.images = [                                                                                        {"id": "296", "exportFilename": "geometric_exp", "title": "", "caption" : ""},
+                         {"id": "264", "exportFilename": "colorful_target", "title": "", "caption" : ""},
+                         {"id": "278", "exportFilename": "THIS_is_boyjupo", "title": "", "caption" : ""},
                                     ]        </script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="assets/js/libs/jquery.velocity.min.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
