--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
 
 <h1>BOYJUPO</h1>
-<h2>GRAOHIC ARTIST</h2>
+<h2>GRAPHIC ARTIST</h2>
+
+Home About Portfolio Contact Resume
 
 <img src="geometric exp.png" alt="" height="500px">
 
