--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -17,7 +17,7 @@
 <h1>BOYJUPO</h1>
 <h2>GRAPHIC ARTIST</h2>
 
-Home About Portfolio Contact Resume
+Home About Portfolio Contact Resume <br>
 
 <img src="geometric exp.png" alt="" height="500px">
 
