--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!doctype html>
+" <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -17,7 +17,14 @@
 <h1>BOYJUPO</h1>
 <h2>GRAPHIC ARTIST</h2>
 
-Home About Portfolio Contact Resume <br>
+<section>
+	<a href= "../../index.html" >Home</a> 
+	<a href= >About</a>
+	<a href= >Portfolio</a>  
+	<a href= "../../contact.html" >Contact</a>  
+	<a href= >Resume</a>  
+	<br>
+</section>
 
 <img src="geometric exp.png" alt="" height="500px">
 
