--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<a href= >About</a>
 	<a href= >Portfolio</a>  
 	<a href= "../../contact.html" >Contact</a>  
-	<a href= >Resume</a>  
+	<a href= "../../resume.pdf" >Resume</a>  
 	<br>
 </section>
 
