--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-" <!doctype html>
+"../../index.html"" <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -20,7 +20,7 @@
 <section>
 	<a href= "../../index.html" >Home</a> 
 	<a href= >About</a>
-	<a href= >Portfolio</a>  
+	<a href= "../../gallery2.html">Portfolio</a>  
 	<a href= "../../contact.html" >Contact</a>  
 	<a href= "../../resume.pdf" >Resume</a>  
 	<br>
