--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<a href= "../../index.html" >Home</a> 
 	<a href= >About</a>
 	<a href= "../../gallery 2.html">Portfolio</a>  
-	<a href= "../../contact.html" >Contact</a>  
+	<a href= "../../Contact.html" >Contact</a>  
 	<a href= "../../resume.pdf" >Resume</a>  
 	<br>
 </section>
