--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section>
 	<a href= "../../index.html" >Home</a> 
 	<a href= >About</a>
-	<a href= "../../gallery 2.html">Portfolio</a>  
+	<a href= "../../gallery.html">Portfolio</a>  
 	<a href= "../../Contact.html" >Contact</a>  
 	<a href= "../../resume.pdf" >Resume</a>  
 	<br>
