Removed "by" and replaced home with Boyjupo

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,7 +19,7 @@
             <div class="background"></div>
             <div class="meta-left">
                 <p id="galleryTitle" class="title"></p>
-                                <p id="galleryAuthor" class="author">by <a id="galleryAuthorURL" href="index.html" target="_blank">Home</a></p>
+                                <p id="galleryAuthor" class="author">   <a id="galleryAuthorURL" href="index.html" target="_blank">Boyjupo</a></p>
                                 </p>
             </div>
             <div class="meta-right">
