--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,6 +14,13 @@
         <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="assets/css/custom.css" >
         <script src="assets/js/libs/modernizr.custom.23122.js"></script>
     </head>
+ 
+    <style>
+   body { background-color: black;
+     }
+        
+ </style>
+    
     <body class="has-header row-spacing-lg" data-pagination-style="scroll" data-target-row-height="400">
                         <header class="is-fixed">
             <div class="background"></div>
