--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 	body{
 		text-align:center;
-		background-color: #FFECD9;
+		background-color: #F9E7D7; <!--FFECD9--> 
 		color: #fff;
 	}	
 </style>
