--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	body{
 		text-align:center;
 		background-color: #F9E7D7; <!--FFECD9--> 
-		color: #fff;
+		color: #44000A; <!--fff-->
 	}	
 </style>
 </head>
