--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 		background-color: #F9E7D7; <!--FFECD9--> 
 		color: #44000A; <!--fff-->
 	}	
+	
+	h1{ 
+		color: #44000A;
+	}
+	
+	h2{
+		color: #44000A;
+	}
 </style>
 </head>
 
@@ -20,9 +28,9 @@
 <section>
 	<a href= "../../index.html" >Home</a> 
 	<a href= >About</a>
-	<a href= "../../gallery">Portfolio</a>  
-	<a href= "../../Contact.html" >Contact</a>  
-	<a href= "../../resume.pdf" >Resume</a>  
+	<a href= "../../gallery">     Portfolio</a>  
+	<a href= "../../Contact.html" >     Contact</a>  
+	<a href= "../../resume.pdf" >     Resume</a>  
 	<br>
 </section>
 
