--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Home Page</title>
 <style>
 	body{
 		text-align:center;
@@ -28,10 +28,10 @@
 <section>
 	<a href= "../../index.html" >Home</a> 
 	<a href= >About</a>
-	<a href= "../../gallery">     Portfolio</a>  
-	<a href= "../../Contact.html" >     Contact</a>  
-	<a href= "../../resume.pdf" >     Resume</a>  
-	<br>
+	<a href= "../../gallery" >Portfolio</a>  
+	<a href= "../../Contact.html" >Contact</a>  
+	<a href= "../../resume.pdf" >Resume</a>  
+	<br> <br>
 </section>
 
 <img src="geometric exp.png" alt="" height="500px">
