--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 	<br> <br>
 </section>
 
-<img src="geometric exp.png" alt="" height="500px">
+<img src="her greatest creation.png " alt="j" height="500px">
 
 
-<img src="THIS is boyjupo.png" alt="" height="500px">
+<img src="bonnie n clyde.png " alt="" height="500px">
 <img src="TPL BBLU.jpg" alt="" height="500px">
 
 </body>
