--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 
 <section>
 	<a href= "../../index.html" >Home</a> 
-	<a href= >About</a>
+	<a href= "../../About.html">About</a>
 	<a href= "../../gallery" >Portfolio</a>  
 	<a href= "../../Contact.html" >Contact</a>  
 	<a href= "../../resume.pdf" >Resume</a>  
