--- a/About.html
+++ b/About.html
@@ -41,7 +41,9 @@ Joshua is known for a his unique scribble style which he incorperates into his w
 
 You can keep up with Joshua on social media where he keeps his fanbase updated weekly with new artwork. 
 Catch Boyjupo's first art appearance at an ART BASEL booth later this year for Art Basel. 
+<br>
 
 
 
 <img src="THIS is boyjupo.png " alt="j" height="500px">
+</body>
