--- a/About.html
+++ b/About.html
@@ -4,8 +4,13 @@
 <meta charset="utf-8">
 <title>Home Page</title>
 <style>
+	img{
+		max-width: 50%;
+	}
 	body{
 		text-align:center;
+		width: 50%;
+		margin: 0 auto;
 		background-color: #F9E7D7; <!--FFECD9--> 
 		color: #44000A; <!--fff-->
 	}	
